<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FightSelect">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fight"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:contentDescription="@string/fightView" />

    <include
        android:id="@+id/include2"
        layout="@layout/activity_player_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Type"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/include2"
        app:layout_constraintVertical_bias="0.0" />

    <ScrollView
        android:id="@+id/scroller"
        android:layout_width="319dp"
        android:layout_height="430dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.0"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonQ1"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:backgroundTint="#FFD39B"
                android:text="@string/簡單"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonQ2"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:backgroundTint="#FFD39B"
                android:text="@string/中等"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonQ3"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:backgroundTint="#FFD39B"
                android:text="@string/困難"
                android:textColor="@color/black"
                android:textSize="20sp" />


        </LinearLayout>

    </ScrollView>

    <ImageButton
        android:id="@+id/back"
        android:layout_width="65dp"
        android:layout_height="55dp"
        android:backgroundTint="#00F6F6F6"
        android:contentDescription="@string/back"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:srcCompat="@drawable/turn"
        tools:ignore="MissingConstraints,UnknownIdInLayout" />

    <ImageButton
        android:id="@+id/btAddQuestion"
        android:layout_width="135dp"
        android:layout_height="50dp"
        android:backgroundTint="#00FFFFFF"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95"
        app:srcCompat="@drawable/add_question"
        tools:ignore="MissingConstraints,UnknownIdInLayout,DuplicateSpeakableTextCheck"
        android:contentDescription="@string/addQuestion" />

</androidx.constraintlayout.widget.ConstraintLayout>