<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:id="@+id/loginBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/background"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/yellow_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/yellow_card"
        app:tint="#80F0E68C"
        tools:ignore="ContentDescription"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-16dp" />

    <ImageView
        android:id="@+id/loginFrame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="68dp"
        android:src="@drawable/login_frame"
        app:layout_constraintBottom_toTopOf="@+id/ButtonLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/login_frame"
        tools:ignore="ContentDescription,MissingConstraints" />

    <TextView
        android:id="@+id/loginView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="100dp"
        android:text="@string/loginGame"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:drawableTint="#000000"
        app:layout_constraintEnd_toEndOf="@+id/loginFrame"
        app:layout_constraintTop_toTopOf="@+id/loginFrame" />

    <TextView
        android:id="@+id/TextAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:text="@string/account"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/loginFrame"
        app:layout_constraintTop_toTopOf="@+id/loginFrame" />

    <TextView
        android:id="@+id/TextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="160dp"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/loginFrame"
        app:layout_constraintTop_toTopOf="@+id/loginFrame" />

    <EditText
        android:id="@+id/InputAccount"
        android:layout_width="195dp"
        android:layout_height="35dp"
        android:background="@drawable/text_frame"
        android:ems="15"
        android:fontFamily="sans-serif-black"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/loginFrame"
        app:layout_constraintEnd_toEndOf="@+id/loginFrame"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/TextAccount"
        app:layout_constraintTop_toTopOf="@+id/loginFrame"
        app:layout_constraintVertical_bias="0.51"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/InputPassword"
        android:layout_width="195dp"
        android:layout_height="35dp"
        android:background="@drawable/text_frame"
        android:ems="15"
        android:fontFamily="sans-serif-black"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/loginFrame"
        app:layout_constraintEnd_toEndOf="@+id/loginFrame"
        app:layout_constraintStart_toEndOf="@+id/TextPassword"
        app:layout_constraintTop_toTopOf="@+id/loginFrame"
        app:layout_constraintVertical_bias="0.83"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,TextFields,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/ButtonLogin"
        android:layout_width="318dp"
        android:layout_height="48dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="453dp"
        android:layout_marginEnd="45dp"
        android:text="@string/login"
        android:textColor="@color/white"
        app:backgroundTint="#80000000"
        app:layout_constraintEnd_toEndOf="@+id/loginBackground"
        app:layout_constraintStart_toStartOf="@+id/loginBackground"
        app:layout_constraintTop_toTopOf="@+id/yellow_card" />

    <Button
        android:id="@+id/ButtonAdd"
        android:layout_width="318dp"
        android:layout_height="48dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="528dp"
        android:layout_marginEnd="45dp"
        android:layout_weight="1"
        android:text="@string/sign"
        android:textColor="@color/white"
        app:backgroundTint="#80000000"
        app:layout_constraintEnd_toEndOf="@+id/loginBackground"
        app:layout_constraintStart_toStartOf="@+id/loginBackground"
        app:layout_constraintTop_toTopOf="@+id/loginBackground" />

    <Button
        android:id="@+id/ButtonDeleteAccount"
        android:layout_width="318dp"
        android:layout_height="48dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="596dp"
        android:layout_marginEnd="45dp"
        android:layout_weight="1"
        android:text="@string/delete"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:backgroundTint="#80000000"
        app:layout_constraintEnd_toEndOf="@+id/loginBackground"
        app:layout_constraintStart_toStartOf="@+id/loginBackground"
        app:layout_constraintTop_toTopOf="@+id/loginBackground" />

</androidx.constraintlayout.widget.ConstraintLayout>